force-app/main/tasks/objects/Task_Catalog__mdt/fields/Action_Link__c.field-meta.xml
<CustomField>
    <fullName>Action_Link__c</fullName>
    <label>Action Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>