force-app/main/tasks/objects/Task_Catalog__mdt/fields/Comments_Label__c.field-meta.xml
<CustomField>
    <fullName>Comments_Label__c</fullName>
    <label>Comments Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>