force-app/main/tasks/objects/Task_Catalog__mdt/fields/Immediate_Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Notification_Type__c</fullName>
    <label>Immediate Notification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>